--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,17 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingsActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/darkRed">
+
+    <Button
+        android:id="@+id/btnDarkLight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        android:backgroundTint="@color/darkSalmon"
+        android:text="@string/darkmode_lightmode"
+        tools:ignore="TextContrastCheck"
+        android:textColor="@color/white"/>
 
     <Button
         android:id="@+id/btnDeleteAllSongs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
-        android:backgroundTint="#F44336"
+        android:backgroundTint="@color/darkOrange"
         android:text="@string/string_delete_all"
-        tools:ignore="TextContrastCheck" />
+        tools:ignore="TextContrastCheck"
+        android:textColor="@color/white"/>
 
 </LinearLayout>
