--- a/app/src/main/res/drawable-v24/baseline_delete_outline_24.xml
+++ b/app/src/main/res/drawable-v24/baseline_delete_outline_24.xml
@@ -6,5 +6,5 @@
     android:tint="@color/darkSalmon">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
+      android:pathData="M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2L18,7L6,7v12zM8,9h8v10L8,19L8,9zM15.5,4l-1,-1h-5l-1,1L5,4v2h14L19,4z"/>
 </vector>
