--- a/app/src/main/res/drawable-v24/baseline_skip_next_24.xml
+++ b/app/src/main/res/drawable-v24/baseline_skip_next_24.xml
@@ -6,5 +6,5 @@
     android:tint="@color/darkSalmon">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
+      android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z"/>
 </vector>
