--- a/app/src/main/res/layout/activity_all_songs.xml
+++ b/app/src/main/res/layout/activity_all_songs.xml
@@ -5,14 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AllSongsActivity">
+    tools:context=".AllSongsActivity"
+    android:background="@color/darkRed">
 
-
-    <androidx.recyclerview.widget.RecyclerView
+    <ListView
         android:id="@+id/viewAllSongs"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_height="match_parent" />
 </LinearLayout>
