--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/darkRed">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,8 +23,7 @@
             android:background="@drawable/baseline_library_music_24"
             android:contentDescription="@string/string_all_songs"
             android:minHeight="150dp"
-            tools:ignore="SpeakableTextPresentCheck"
-            app:tint="#A84242" />
+            tools:ignore="SpeakableTextPresentCheck"/>
 
         <ImageButton
             android:id="@+id/btnPlaylistsActivity"
