--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,14 @@
     <!-- Base application theme. -->
     <style name="Theme.Proiect_Tehnologii_Mobile" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/teal_200</item>
-        <item name="colorPrimaryVariant">@color/teal_700</item>
+        <item name="colorPrimary">@color/darkOrange</item>
+        <item name="colorPrimaryVariant">@color/darkSalmon</item>
+        <item name="backgroundColor">@color/darkRed</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/cool_grey_500</item>
-        <item name="colorSecondaryVariant">@color/cool_grey_700</item>
-        <item name="colorOnSecondary">@color/cool_grey_900</item>
+        <item name="colorSecondary">@color/darkOrange</item>
+        <item name="colorSecondaryVariant">@color/darkOrange</item>
+        <item name="colorOnSecondary">@color/darkOrange</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
