--- a/app/src/main/res/layout/activity_generic_video.xml
+++ b/app/src/main/res/layout/activity_generic_video.xml
@@ -37,10 +37,10 @@
                 android:textColor="@color/white"
                 android:textSize="22sp"/>
 
-            <VideoView
-                android:id="@+id/videoView2"
+            <com.google.android.youtube.player.YouTubePlayerView
+                android:id="@+id/vidYoutube"
                 android:layout_width="match_parent"
-                android:layout_height="198dp" />
+                android:layout_height="wrap_content"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -61,7 +61,7 @@
                     android:minWidth="50dp"
                     android:minHeight="50dp"
                     tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
-                    android:layout_marginRight="10dp"/>
+                    android:layout_marginEnd="10dp"/>
 
                 <ImageButton
                     android:id="@+id/btnPause"
@@ -72,7 +72,7 @@
                     android:minWidth="50dp"
                     android:minHeight="50dp"
                     tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
-                    android:layout_marginRight="10dp"/>
+                    android:layout_marginEnd="10dp"/>
 
                 <ImageButton
                     android:id="@+id/btnNext"
@@ -83,7 +83,7 @@
                     android:minWidth="50dp"
                     android:minHeight="50dp"
                     tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
-                    android:layout_marginRight="10dp"/>
+                    android:layout_marginEnd="10dp"/>
 
                 <ImageButton
                     android:id="@+id/btnAddToPlaylist"
@@ -94,8 +94,7 @@
                     android:minWidth="50dp"
                     android:minHeight="50dp"
                     tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
-                    android:layout_marginRight="10dp"/>
-
+                    android:layout_marginEnd="10dp"/>
                 <ImageButton
                     android:id="@+id/btnDelete"
                     android:layout_width="wrap_content"
@@ -105,7 +104,7 @@
                     android:minWidth="50dp"
                     android:minHeight="50dp"
                     tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
-                    android:layout_marginRight="10dp"/>
+                    android:layout_marginEnd="10dp"/>
 
                 <ImageButton
                     android:id="@+id/btnModify"
