--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical"
-    android:background="@color/darkRed">
+    android:background="@color/darkRed"
+    android:gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/btnAllSongsActivity"
@@ -23,6 +23,7 @@
             android:background="@drawable/baseline_library_music_24"
             android:contentDescription="@string/string_all_songs"
             android:minHeight="150dp"
+            android:minWidth="150dp"
             tools:ignore="SpeakableTextPresentCheck"/>
 
         <ImageButton
@@ -34,6 +35,7 @@
             android:background="@drawable/baseline_playlist_play_24"
             android:contentDescription="@string/string_playlists"
             android:minHeight="150dp"
+            android:minWidth="150dp"
             tools:ignore="SpeakableTextPresentCheck" />
 
     </LinearLayout>
@@ -52,6 +54,7 @@
             android:background="@drawable/baseline_add_circle_24"
             android:contentDescription="@string/StringAddSong"
             android:minHeight="150dp"
+            android:minWidth="150dp"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
@@ -63,6 +66,7 @@
             android:background="@drawable/baseline_settings_24"
             android:contentDescription="@string/nav_settings"
             android:minHeight="150dp"
+            android:minWidth="150dp"
             tools:ignore="SpeakableTextPresentCheck" />
 
     </LinearLayout>
