--- a/app/src/main/res/layout/activity_add_to_playlist.xml
+++ b/app/src/main/res/layout/activity_add_to_playlist.xml
@@ -8,17 +8,34 @@
     android:orientation="vertical"
     android:background="@color/darkRed">
 
-    <Button
-        android:id="@+id/btnAddPlaylist"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="20dp"
-        android:text="Create new playlist"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/darkOrange"/>
+        android:orientation="horizontal"
+        android:layout_margin="10dp"
+        android:gravity="center">
+
+        <EditText
+            android:id="@+id/inpPlaylistName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:ems="10"
+            android:hint="@string/playlist_name"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:minHeight="48dp"
+            android:textColor="@color/white"
+            android:textColorHint="#BC9191" />
+
+        <Button
+            android:id="@+id/btnAddPlaylist"
+            android:layout_width="136dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/darkOrange"
+            android:text="@string/create_new_playlist"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/viewAddToPlaylists"
